<resources>
    <string name="app_name">Tech</string>
    <string name="app_start_title">维度科技</string> <!--app闪屏页启动标题-->
    <string name="app_start_title2">八维移动通信学院作品</string> <!--app闪屏页底部启动标题-->
    <string name="txt_loginandregist_slidingmenu">登录/注册</string> <!--侧滑页-->
    <string name="btn_login">登录</string> <!--登录页按钮-->

    <!--登录页按钮-->
    <string name="userPhone">手机号</string>
    <string name="userPaw">密码</string>
    <string name="btn_fastregist">快速注册</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <!--注册界面-->
    <string name="btn_noteverifyfastregist" translatable="false">短信验证快速注册</string>
    <string name="btn_register" translatable="false">注册</string>
    <string name="btn_nickname" translatable="false">昵称</string>


    <!--底部导航文字-->
    <string name="txt_information_homebtnbuttom">资讯</string>
    <string name="txt_message_homebtnbuttom">消息</string>
    <string name="txt_community_homebtnbuttom">社区</string>


    <!-- Strings related to login -->
    <!-- <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
<<<<<<< HEAD
    </string> --><!--侧滑菜单栏登录注册-->

    <!-- </string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string> <!--侧滑菜单栏登录注册-->



</resources>
