<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wd.tech.page.HomeActivity">
    //切换页
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></android.support.v4.view.ViewPager>

    //底部按钮
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:background="#d7d5d5"
        android:paddingTop="@dimen/dp_10"
        >

        //资讯
        <LinearLayout
            android:id="@+id/ll_information_buttom"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/img_information_buttom"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@mipmap/common_tab_informatiion_s_hdpi"
                android:layout_gravity="center"

                />

            <TextView
                android:id="@+id/txt_information_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/txt_information_homebtnbuttom"
                android:layout_gravity="center"
                />

        </LinearLayout>

        //消息
        <LinearLayout
            android:id="@+id/ll_message_buttom"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/img_message_buttom"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@mipmap/common_tab_message_s_hdpi"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/txt_message_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/txt_message_homebtnbuttom"
                android:layout_gravity="center"
                />

        </LinearLayout>

        //社区
        <LinearLayout
            android:id="@+id/ll_community_buttom"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/img_community_buttom"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@mipmap/common_tab_community_s_hdpi"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/txt_community_buttom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/txt_community_homebtnbuttom"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
