<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/yindao"
    >

    <LinearLayout
        android:id="@+id/ly_shang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_150"
        android:layout_marginRight="@dimen/dp_40"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@mipmap/login_icon_phone_n_hdpi" />

            <EditText
                android:id="@+id/userPhono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sp_20"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/userPhone"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textColorLink="#ffffff"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#ffffff"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_30"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:src="@mipmap/login_icon_lock_n_hdpi" />

            <EditText
                android:id="@+id/userPaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_toLeftOf="@id/img_y"
                android:layout_toRightOf="@id/img_s"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/userPaw"
                android:inputType="textPassword"
                android:lines="1"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/img_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/login_icon_eye_n_hdhpi" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#ffffff"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_30"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:layout_below="@id/ly_shang"
        >
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@drawable/bg_btn_r"
            android:text="@string/btn_login"
            android:textColor="#f9f5f5"
            android:textSize="@dimen/sp_18" />

    </RelativeLayout>

</RelativeLayout>